--- a/Notebooks/Εισαγωγή_στην_Python.ipynb
+++ b/Notebooks/Εισαγωγή_στην_Python.ipynb
@@ -4,11 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [
-        "3XMNbxobcxPk"
-      ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNaT8UG6CDIjmAS2B6qP7vQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -381,7 +377,7 @@
       "source": [
         "import math #εισαγωγή ενός πακέτου με μαθηματικές συναρτήσεις\n",
         "\n",
-        "from math import sin, sqrt #παράδειγμα εισαγωγής των συναρτήσεων του ημιτόνου και της τετραγωγικής ρίζας από το πακέτο math"
+        "from math import sin, sqrt , cos#παράδειγμα εισαγωγής των συναρτήσεων του ημιτόνου και της τετραγωγικής ρίζας από το πακέτο math"
       ],
       "metadata": {
         "id": "Kh8LvmOi42XM"
@@ -530,6 +526,21 @@
     {
       "cell_type": "code",
       "source": [
+        "def F_x(x):\n",
+        "  return 2*x+1\n",
+        "\n",
+        "F_x(2)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "LXLKgu8H6yfe"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def celcius_to_kelvins(temp_celcius):\n",
         "  return 273.15+temp_celcius\n"
       ],
@@ -607,6 +618,32 @@
       "metadata": {
         "id": "zGXHaJs5pFQV"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mylist=['C++', 'Java', 'Python']\n",
+        "mylist[1]='PHP' #ανανεώσαμε το δεύτερο στοιχείο της λίστας\n",
+        "mylist"
+      ],
+      "metadata": {
+        "id": "A7LWcQRv9Y_6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "town='Metsovo'\n",
+        "town[0]\n",
+        "town[1:5]"
+      ],
+      "metadata": {
+        "id": "tvnWjlcS8wEP"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1240,7 +1277,8 @@
         "# object της df_api dataframe και έπειτα κάθε στοιχείου του dictionary\n",
         "# μετατρέπεται σε στήλη της νέας dataframe\n",
         "\n",
-        "df_api_ = df_api['object'].apply(expand_str_dict_to_columns).apply(pd.Series)"
+        "df_api_ = df_api['object'].apply(expand_str_dict_to_columns).apply(pd.Series)\n",
+        "df_api"
       ],
       "metadata": {
         "id": "Gu6LAo1YeXM0"
@@ -1279,7 +1317,7 @@
     {
       "cell_type": "code",
       "source": [
-        "type(df_api[\"temp_SOIL\"][0])"
+        "type(df_api[\"water_SOIL\"][0])"
       ],
       "metadata": {
         "id": "cZLOYlq_f3-a"
