--- a/Notebooks/Εισαγωγή_στην_Python.ipynb
+++ b/Notebooks/Εισαγωγή_στην_Python.ipynb
@@ -1183,6 +1183,44 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Εξερευνώντας υδρολογικά δεδομένα με τη βιβλιοθήκη pandas"
+      ],
+      "metadata": {
+        "id": "xJJ_LwZmUMxg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd"
+      ],
+      "metadata": {
+        "id": "fp7AQ3PATNDj"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Εισάγουμε το αρχείο μας με τη συνάρτηση .read_csv() και το αποθηκεύουμε στην μεταβλητή df."
+      ],
+      "metadata": {
+        "id": "tzwXFWXOUlsc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "0b-us6isUkqs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#### Εξερευνoντάς υδρολογικά δεδομένα με την βιβλιοθήκη pandas\n",
         "\n",
         "**Τι είναι ένα API;**\n",
