--- a/Notebooks/Infiltration_experiment.ipynb
+++ b/Notebooks/Infiltration_experiment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMX06RSTonziuT6wlcg+v2T",
+      "authorship_tag": "ABX9TyOy2sDPdRQ2Z4HG7/2qEKy+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -141,7 +141,7 @@
         "# Water depth in the ring\n",
         "D0=2.54 #cm constant parameter\n",
         "\n",
-        "lambda_val=0.08/100 #from m to cm\n",
+        "lambda_val=0.25/100 #from m to cm\n",
         "\n",
         "df[\"Kfs(cm/min)\"] = calculate_Kfs(\n",
         "    LG=LG,\n",
@@ -151,10 +151,7 @@
         ")\n",
         "\n",
         "# Convert Kfs into m/day (example conversion)\n",
-        "df[\"Kfs(m/day)\"] = [\n",
-        "    kfs/(100*60) if not np.isnan(kfs) else np.nan\n",
-        "    for kfs in df[\"Kfs(cm/min)\"]\n",
-        "]\n",
+        "df[\"Kfs(m/day)\"] = df[\"Kfs(cm/min)\"] * 14.4 #1440/100\n",
         "\n",
         "df\n"
       ],
