--- a/Notebooks/Infiltration_experiment.ipynb
+++ b/Notebooks/Infiltration_experiment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOy2sDPdRQ2Z4HG7/2qEKy+",
+      "authorship_tag": "ABX9TyNZQWxhJgeZ3SsQje1e6uLH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -43,6 +43,8 @@
         "   1. Soils with significant structural development $\\lambda$: 0.08 m.\n",
         "   2. Coarse and gravelly soils $\\lambda$: 0.03 m.\n",
         "   3. Fine textured soils without macropore $\\lambda$: 0.25 m.\n",
+        "\n",
+        "For more information on $\\lambda$ values see: White, I., and M. J. Sully (1987), Macroscopic and microscopic capillary length and time scales from field infiltration, Water Resour. Res., 23(8), 1514–1522, doi:10.1029/WR023i008p01514.\n",
         "\n",
         "\n",
         "\n"
@@ -132,18 +134,18 @@
     {
       "cell_type": "code",
       "source": [
-        "insertion_depth= df[\"Insertion_depth_cm\"][0]\n",
-        "\n",
+        "insertion_depth= df[\"Insertion_depth_cm\"][0]/100\n",
+        "print(insertion_depth)\n",
         "# Calculate geometry parameter LG\n",
-        "LG = 0.993 * insertion_depth + 0.578 * 7.5  # Assuming 7.5cm is the ring radius\n",
+        "LG = 0.316*np.pi * insertion_depth + 0.184*np.pi * 7.5/100  # Assuming 7.5cm is the ring radius\n",
         "print(LG)\n",
         "\n",
         "# Water depth in the ring\n",
-        "D0=2.54 #cm constant parameter\n",
+        "D0=2.54/100 #cm constant parameter\n",
         "\n",
-        "lambda_val=0.25/100 #from m to cm\n",
+        "lambda_val=0.03\n",
         "\n",
-        "df[\"Kfs(cm/min)\"] = calculate_Kfs(\n",
+        "df[\"Kfs(m/min)\"] = calculate_Kfs(\n",
         "    LG=LG,\n",
         "    tf=df[\"tf_min\"],\n",
         "    D0=D0,\n",
@@ -151,7 +153,7 @@
         ")\n",
         "\n",
         "# Convert Kfs into m/day (example conversion)\n",
-        "df[\"Kfs(m/day)\"] = df[\"Kfs(cm/min)\"] * 14.4 #1440/100\n",
+        "df[\"Kfs(m/day)\"] = df[\"Kfs(m/min)\"] * 1440\n",
         "\n",
         "df\n"
       ],
